--- a/Relogio/index.html
+++ b/Relogio/index.html
@@ -15,7 +15,7 @@
 
     <div class="clock">
         
-        <div class="relogio">
+        <div class="relogioLight">
             
             <div>
                 <p id="Horas">00</p>
