--- a/media escolar/index.html
+++ b/media escolar/index.html
@@ -7,24 +7,22 @@
     <title>Faça sua Média</title>
 </head>
 <body> 
-    <p id="text1">Bem-Vind@ a Calculadora de NOTAS!</p>
-    <p id="text2">Digite seus dados abaixo!</p>    
    <div class="elementos">
        
-        <label for="nome">Nome:</label>
+        <label for="nome">Nome</label>
         <input type="text" name="nome" id="respostanome">
 <p></p>
-        <label for="1uni">Nota da 1ª UNIDADE:</label>
+        <label for="1uni">Nota da 1ª UNIDADE</label>
         <input type="text" name="1uni" id="nota1">
 <p></p>
-        <label for="2uni">Nota da 2ª UNIDADE:</label>
+        <label for="2uni">Nota da 2ª UNIDADE</label>
         <input type="text" name="2uni" id="nota2">
 <p></p>
-        <label for="3uni">Nota da 3ª UNIDADE:</label>
+        <label for="3uni">Nota da 3ª UNIDADE</label>
         <input type="text" name="3uni" id="nota3">
 <p></p>  
     </div>
-    <button type="button">CALCULE</button>
+    <button id="button" type="button">CALCULE</button>
     <p></p>
     <span id="resultado"></span>
     <script src="js/script.js"></script>
